// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button renders with default variant correctly 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ink focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-ink text-background hover:bg-ink-secondary h-10 px-4 py-2"
>
  Click me
</button>
`;

exports[`Button renders with destructive variant correctly 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ink focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-surface border border-ink text-ink font-bold hover:bg-border h-10 px-4 py-2"
>
  Delete
</button>
`;
